--- a/src/Containers/Home/Components/carousel/index.scss
+++ b/src/Containers/Home/Components/carousel/index.scss
@@ -1,10 +1,13 @@
-.swiper-slide {
-  height: 550px;
-}
-.swiper-button-next,
-.swiper-button-prev {
-  color: white;
-}
-.swiper-pagination-bullet-active {
-  background-color: white;
+.carouselMovie {
+  z-index: -1;
+  .swiper-slide {
+    height: 550px;
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    color: white;
+  }
+  .swiper-pagination-bullet-active {
+    background-color: white;
+  }
 }
