--- a/src/Containers/Home/HomePage/news/news.scss
+++ b/src/Containers/Home/HomePage/news/news.scss
@@ -6,12 +6,12 @@
     height: 600px;
     .wrapper {
         .mainMaxWidth {
-            max-width: 940px;
-            float: none;
-            margin: auto;
-            clear: both;
-            height: 600px;
-            width: 100%;
+            // max-width: 940px;
+            // float: none;
+            // margin: auto;
+            // clear: both;
+            // height: 600px;
+            // width: 100%;
             .news__left {
                 padding-top: 60px;
                 padding-left: 15px;
@@ -53,11 +53,11 @@
                 height: 100%;
                 .news__slider {
                     position: absolute;
-                    padding: 1.5% 29.3% 0 29.3%;
+                    padding: 1% 28% 0 28%;
                     top: 0;
                     left: 0;
                     width: 100%;
-                    height: 490px;
+                    height: 420px;
                     .slick-list {
                         overflow: hidden;
                         border-radius: 20px;
@@ -66,11 +66,11 @@
                         background-position: center;
                         background-repeat: no-repeat;
                         background-size: cover;
-                        height: 490px;
-                        width: 195px !important;
+                        height: 410px;
+                        width: 250px !important;
                         vertical-align: middle;
-                        border: 0;
-                        // border-radius: 15px;
+                        border: 1px solid;
+                        border-radius: 15px;
                     }
                     .news__img2 {
                         background-image: url(../../../../assets/img/mobileNews/slide2.jpg);
