--- a/src/Containers/Home/HomePage/movieList/movieItem/index.scss
+++ b/src/Containers/Home/HomePage/movieList/movieItem/index.scss
@@ -1,101 +1,114 @@
 .movieItem {
-    position: relative;
-    padding: 0 25px;
+  position: relative;
+  padding: 0 25px;
+  border: 0;
+  .card {
     border: 0;
-    .card {
+  }
+  .showMovieItem {
+    height: 300px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    overflow: hidden;
+    z-index: 5;
+    .hideMovieItem {
+      z-index: 999;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 300px;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.2s;
+      border-radius: 5px;
+      button {
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-65%, -70%);
+        z-index: 10;
+        background: 0 0;
+        border: none;
+      }
+      button:focus {
+        outline: none;
+      }
+    }
+  }
+  .hideHover {
+    padding: 0;
+    position: relative;
+    .infoMovieItem {
+      .card-title {
+        margin-bottom: 0.25rem;
+      }
+    }
+    .btnItemMovie {
+      position: absolute;
+      top: 0px;
+      left: 0;
+      width: 100%;
+      transition: all 0.2s;
+      button {
+        width: 100%;
+        border-radius: 4px;
+        color: #fff;
+        font-size: 18px !important;
+        padding: 10px;
+        text-align: center;
+        background: linear-gradient(to left, #fb4226, #ce3017 100%);
         border: 0;
-    }
-    .showMovieItem {
-        height: 300px;
-        border-radius: 5px;
-        margin-bottom: 10px;
-        overflow: hidden;
-        .hideMovieItem {
-            z-index: 999;
-            position: absolute;
-            top: 0%;
-            left: 0%;
-            width: 100%;
-            height: 300px;
-            visibility: hidden;
-            opacity: 0;
-            transition: all 0.2s;
-            border-radius: 5px;
-            button {
-                width: 60px;
-                height: 60px;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-65%, -70%);
-                z-index: 3;
-                background: 0 0;
-                border: none;
-            }
-            button:focus {
-                outline: none;
-            }
+        visibility: hidden;
+        opacity: 0;
+        &:focus {
+          outline: none;
         }
-    }
-    .hideHover {
-        padding: 0;
-        position: relative;
-        .infoMovieItem {
-            .card-title {
-                margin-bottom: 0.25rem;
-            }
+        &:active {
+          // outline: 5px auto -webkit-focus-ring-color;
+          // outline-offset: -2px;
+          outline: none;
+          //   background: linear-gradient(to left, #ce3017, #fb4226 100%);
+          background: none;
+          background-color: #f79400;
         }
-        .btnItemMovie {
-            position: absolute;
-            top: 0px;
-            left: 0;
-            width: 100%;
-            transition: all 0.2s;
-            button {
-                width: 100%;
-                border-radius: 4px;
-                color: #fff;
-                font-size: 18px !important;
-                padding: 10px;
-                text-align: center;
-                background: linear-gradient(to left, #fb4226, #ce3017 100%);
-                border: 0;
-                visibility: hidden;
-                opacity: 0;
-            }
-            button:focus {
-                outline: 5px auto -webkit-focus-ring-color;
-                outline-offset: -2px;
-            }
-        }
+      }
     }
+  }
 }
-.movieItem:hover {
-    cursor: pointer;
-    .showMovieItem {
-        .hideMovieItem {
-            visibility: visible;
-            opacity: 1;
-            background: linear-gradient(to top, #000, transparent 100%);
-            // top: 0;
-            border-radius: 4px !important ;
-            button:hover {
-                opacity: 0.7;
-            }
-        }
+.card:hover {
+  cursor: pointer;
+  .showMovieItem {
+    .hideMovieItem {
+      visibility: visible;
+      opacity: 1;
+      background: linear-gradient(to top, #000, transparent 100%);
+      // top: 0;
+      border-radius: 4px !important ;
+      button:hover {
+        opacity: 0.7;
+      }
     }
-    .hideHover {
-        .infoMovieItem {
-            visibility: hidden;
-            opacity: 0;
-        }
-        .btnItemMovie {
-            visibility: visible;
-            opacity: 1;
-            button {
-                visibility: visible;
-                opacity: 1;
-            }
-        }
+  }
+  .hideHover {
+    .infoMovieItem {
+      visibility: hidden;
+      opacity: 0;
     }
+    .btnItemMovie {
+      visibility: visible;
+      opacity: 1;
+      button {
+        // outline: none;
+        visibility: visible;
+        opacity: 1;
+        // &:hover {
+        //   background-color: #f79400;
+        //   transition: all 0.35;
+        // }
+      }
+    }
+  }
 }
