--- a/src/Containers/Home/HomePage/news/news.scss
+++ b/src/Containers/Home/HomePage/news/news.scss
@@ -14,7 +14,7 @@
             // width: 100%;
             .news__left {
                 padding-top: 60px;
-                padding-left: 15px;
+                padding-left: 0;
                 padding-right: 15px;
                 .textSmallLeft {
                     color: #fff;
