--- a/src/Containers/Home/HomePage/movieList/movieItem/index.scss
+++ b/src/Containers/Home/HomePage/movieList/movieItem/index.scss
@@ -2,6 +2,7 @@
     position: relative;
     padding: 0 25px;
     border: 0;
+    margin: 10px 0 !important;
     .card {
         border: 0;
     }
