--- a/src/Containers/Home/HomePage/checkout/index.scss
+++ b/src/Containers/Home/HomePage/checkout/index.scss
@@ -94,3 +94,34 @@
   display: flex;
   flex-wrap: wrap;
 }
+.seats__booking,
+.wapper {
+  background-color: rgb(192, 66, 66);
+}
+.theater__infor {
+  display: flex;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+  .infor__left {
+    align-items: center;
+  }
+}
+
+.checkout__right {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+.checkout__header {
+  z-index: 5;
+  box-shadow: 0px 10px 10px -10px #888888;
+}
+
+.ticketRoom__info {
+  h1 {
+    color: rgb(247, 148, 0);
+    height: 90px;
+    line-height: 80px;
+    border-bottom: 1px solid #e9e9e9;
+    margin: 0;
+  }
+}
