--- a/src/Containers/Home/HomePage/news/news.scss
+++ b/src/Containers/Home/HomePage/news/news.scss
@@ -1,4 +1,5 @@
 .news {
+    padding-top: 70px;
     background-image: url(../../../../assets/img/backgroundNews.jpg);
     background-position: center;
     background-repeat: no-repeat;
