--- a/src/Containers/Home/Components/carousel/index.scss
+++ b/src/Containers/Home/Components/carousel/index.scss
@@ -1,58 +1,61 @@
-.carouselMovie {
-  // z-index: -1;
+.carouselMain {
+  margin-top: 70px;
+  .carouselMovie {
+    // z-index: -1;
 
-  .swiper-slide {
-    height: 550px;
-    .play__trailer {
-      border: none;
-      background-color: transparent;
-      transform: 50% 50%;
-      /* transform: translate(50%,50%); */
-      position: absolute;
-      top: calc(50% - 22.5px);
-      left: calc(50% - 22.5px);
-      transform: scale(0.1);
-      outline: none;
-      padding: 0;
-      margin: 0;
-      width: 45;
-      width: 45px;
-      height: 45px;
-      opacity: 0;
-
-      transition: all 0.35s;
-      .material-icons__play {
-        font-size: 40px;
-        border: 2px solid white;
-        border-radius: 50%;
-        line-height: 42px;
+    .swiper-slide {
+      height: 550px;
+      .play__trailer {
+        border: none;
+        background-color: transparent;
+        transform: 50% 50%;
+        /* transform: translate(50%,50%); */
+        position: absolute;
+        top: calc(50% - 22.5px);
+        left: calc(50% - 22.5px);
+        transform: scale(0.1);
+        outline: none;
+        padding: 0;
+        margin: 0;
+        width: 45;
         width: 45px;
         height: 45px;
-        background-color: wheat;
-        color: white;
-        transition: all 0.5s;
-      }
-    }
-  }
-  .swiper-slide-active {
-    .play__trailer {
-      transform: scale(1);
-      opacity: 1;
-      transition: all 1.75s;
-      &:hover .material-icons__play {
-        color: #f79400;
-        background-color: rgba($color: #dfdfdf, $alpha: 0.4);
-        transition: all 0.5s;
-      }
-    }
-  }
+        opacity: 0;
 
-  .swiper-button-next,
-  .swiper-button-prev {
-    color: white;
-    outline: none;
-  }
-  .swiper-pagination-bullet-active {
-    background-color: white;
+        transition: all 0.35s;
+        .material-icons__play {
+          font-size: 40px;
+          border: 2px solid white;
+          border-radius: 50%;
+          line-height: 42px;
+          width: 45px;
+          height: 45px;
+          background-color: wheat;
+          color: white;
+          transition: all 0.5s;
+        }
+      }
+    }
+    .swiper-slide-active {
+      .play__trailer {
+        transform: scale(1);
+        opacity: 1;
+        transition: all 1.75s;
+        &:hover .material-icons__play {
+          color: #f79400;
+          background-color: rgba($color: #dfdfdf, $alpha: 0.4);
+          transition: all 0.5s;
+        }
+      }
+    }
+
+    .swiper-button-next,
+    .swiper-button-prev {
+      color: white;
+      outline: none;
+    }
+    .swiper-pagination-bullet-active {
+      background-color: white;
+    }
   }
 }
