--- a/src/Containers/Home/Components/header/index.scss
+++ b/src/Containers/Home/Components/header/index.scss
@@ -1,24 +1,85 @@
-.header__content {
-  position: relative;
-  width: 100%;
-  z-index: 5;
-  background: rgba($color: #000000, $alpha: 0);
-}
-.header__change {
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: fixed;
-  width: 100%;
   top: 0;
-  background-color: rgba($color: #ffffff, $alpha: 0.5);
-  transition: all 1s;
-  animation: stickyHeader 1s;
+  left: 0;
+  width: 100%;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  padding: 0 20px;
+  height: 70px;
+  z-index: 999999;
+  background-color: rgba(255, 255, 255, 0.95);
+  transition: all 0.2s;
 }
-@keyframes stickyHeader {
-  from {
-    top: -60px;
-    opacity: 0;
-  }
-  to {
-    top: 0px;
-    opacity: 1;
+header:hover {
+  background-color: white;
+}
+.logo img {
+  width: 60px;
+}
+.header__menu ul {
+  list-style: none;
+}
+.movie__item p {
+  font-size: 17px;
+}
+.header__menu ul li {
+  display: inline;
+  margin: 0 10px;
+}
+.header__menu ul li a {
+  color: black;
+  text-decoration: none;
+  transition: all 0.2s;
+  font-weight: 500;
+}
+.header__menu ul li a:hover {
+  color: #fb4226;
+}
+.signin {
+  color: #999;
+  text-decoration: none;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+}
+.signin {
+  color: #9b9b9b;
+  margin: inherit;
+  font-size: 13px;
+  img {
+    height: auto;
+    width: 30px;
+    border-radius: 25px;
+    margin-right: 5px;
   }
 }
+.signin:hover {
+  color: #9b9b9b;
+  text-decoration: none;
+}
+.signin i {
+  font-size: 30px;
+  margin-right: 10px;
+}
+
+// .header__change {
+//   position: fixed;
+//   width: 100%;
+//   top: 0;
+//   background-color: rgba($color: #ffffff, $alpha: 0.5);
+//   transition: all 1s;
+//   animation: stickyHeader 1s;
+// }
+// @keyframes stickyHeader {
+//   from {
+//     top: -60px;
+//     opacity: 0;
+//   }
+//   to {
+//     top: 0px;
+//     opacity: 1;
+//   }
+// }
