--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body,
 html {
+  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
