--- a/src/Containers/Home/HomePage/MovieDetail/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/index.scss
@@ -10,24 +10,34 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
-            height: 33rem;
+            height: 27rem;
             box-shadow: none;
+            margin-bottom: 10px;
         }
         .movie__backgroundPlus {
             position: absolute;
             top: 0;
             left: 0;
-            height: 34rem;
+            height: 29rem;
             width: 100%;
-            background: linear-gradient(to top, rgb(5, 15, 19), transparent 150%);
+            background: linear-gradient(to top, rgb(10, 32, 41), transparent 150%);
+        }
+        .contentMain {
+            z-index: 99999999;
+            color: white;
+            height: 37rem;
+            // transform: translate(0, -70px);
+            background: rgb(10, 32, 41);
+            // margin-top: 50px;
+            // background: linear-gradient(to top, rgb(10, 32, 41), transparent 4000%);
         }
         .movie__content {
             position: absolute;
-            top: 50%;
+            top: 30%;
             width: 100%;
             left: 50%;
             z-index: 99999;
-            transform: translate3d(-50%, -50%, 0);
+            transform: translate3d(-50%, -70%, 0);
             color: white;
             .filmPoster {
                 padding-left: 0 !important;
