--- a/src/Containers/Home/HomePage/MovieDetail/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/index.scss
@@ -25,7 +25,7 @@
         .contentMain {
             z-index: 99999999;
             color: white;
-            height: 37rem;
+            // height: 37rem;
             // transform: translate(0, -70px);
             background: rgb(10, 32, 41);
             // margin-top: 50px;
@@ -33,7 +33,7 @@
         }
         .movie__content {
             position: absolute;
-            top: 30%;
+            top: 35%;
             width: 100%;
             left: 50%;
             z-index: 99999;
@@ -44,13 +44,34 @@
                 padding-right: 0 !important;
                 max-width: 220px;
                 height: 100%;
-                img {
+                position: relative;
+                .imgPoster {
                     height: auto;
                     border-radius: 4px;
                     // padding-top: 147.90697674%;
                     background-position: center;
                     background-size: cover;
                     background-repeat: no-repeat;
+                }
+                .play__trailer {
+                    position: absolute;
+                    top: 45%;
+                    left: 45%;
+                    transform: translate(-50%, -50%);
+                    background: 0 0;
+                    border: none;
+                    width: 60px;
+                    height: 60px;
+                    opacity: 0;
+                    transition: all 0.2s;
+                }
+                .play__trailer:focus {
+                    outline: none;
+                }
+            }
+            .filmPoster:hover {
+                .play__trailer {
+                    opacity: 1;
                 }
             }
             .nameMovie {
@@ -84,6 +105,7 @@
                 width: 220px;
                 height: 220px;
                 padding: 0;
+                margin-left: 50px;
                 .starReview {
                     text-align: center;
                     margin: 10px 0;
