up homepage tool code

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
 body,
 html {
   scroll-behavior: smooth;
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+html {
+  overflow-y: scroll !important;
 }
 .mainMaxWidth {
   max-width: 940px;
