--- a/src/Containers/Home/Components/carousel/index.scss
+++ b/src/Containers/Home/Components/carousel/index.scss
@@ -1,5 +1,16 @@
 .carouselMain {
   margin-top: 70px;
+  position: relative;
+  .selectMovieDiv {
+    height: 80px;
+    width: 950px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    z-index: 10;
+    border-radius: 6px;
+    transform: translate(-50%, 50%);
+  }
   .carouselMovie {
     // z-index: -1;
 
