update movieDetail - schedule

--- a/src/Containers/Home/HomePage/MovieDetail/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/index.scss
@@ -29,6 +29,7 @@
             // height: 37rem;
             // transform: translate(0, -70px);
             background: rgb(10, 32, 41);
+            transition: all 0.2s;
             // margin-top: 50px;
             // background: linear-gradient(to top, rgb(10, 32, 41), transparent 4000%);
         }
