--- a/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/heThongRapComponent/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/heThongRapComponent/index.scss
@@ -1,6 +1,7 @@
 .list-group-item {
     transition: all 0.2s !important;
     // border-radius: 5px;
+    padding: 20px 20px 20px 25px;
 }
 .list-group-item:hover {
     .imgHover {
