--- a/src/Containers/Home/HomePage/checkout/index.scss
+++ b/src/Containers/Home/HomePage/checkout/index.scss
@@ -102,6 +102,7 @@
 .theater__infor {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 90%;
   margin: 0 auto;
   .infor__left {
