--- a/src/Containers/Home/HomePage/movieSchedule/lichChieuPhim/movieItem/index.scss
+++ b/src/Containers/Home/HomePage/movieSchedule/lichChieuPhim/movieItem/index.scss
@@ -12,6 +12,9 @@
 }
 
 .listSuatChieuPhim {
+  display: flex;
+    row-gap: 15px;
+    flex-wrap: wrap;
   .btn__datVe {
     outline: none;
     background-color: rgba(216, 216, 216, 0.568);
