--- a/src/Containers/Home/Components/carousel/index.scss
+++ b/src/Containers/Home/Components/carousel/index.scss
@@ -16,6 +16,7 @@
 
     .swiper-slide {
       height: 550px;
+      cursor: pointer;
       .play__trailer {
         border: none;
         background-color: transparent;
