--- a/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/cumRapComponent/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/cumRapComponent/index.scss
@@ -9,8 +9,14 @@
         margin-bottom: -1px;
         padding: 15px 0px 10px 20px;
         min-height: 92px;
+        .lichChieu {
+            overflow: hidden;
+            transition: all 0.2s;
+        }
         h6 {
-            margin-bottom: 2px;
+            cursor: pointer;
+            // margin-bottom: 15px;
+            padding-bottom: 30px;
         }
         p {
             line-height: 1.7;
