--- a/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/heThongRapComponent/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/heThongRapComponent/index.scss
@@ -1,7 +1,13 @@
 .list-group-item {
     transition: all 0.2s !important;
     // border-radius: 5px;
-    padding: 20px 20px 20px 25px;
+    padding: 15px 0px 15px 0px;
+    text-align: center;
+    cursor: pointer;
+    border-top-right-radius: 0 !important;
+}
+.list-group-item:last-child {
+    border-bottom-right-radius: 0 !important;
 }
 .list-group-item:hover {
     .imgHover {
