--- a/src/Containers/Home/HomePage/movieSchedule/heThongRap/index.scss
+++ b/src/Containers/Home/HomePage/movieSchedule/heThongRap/index.scss
@@ -26,6 +26,10 @@
     border-top: 1px solid #ebebec;
     border-bottom: 1px solid #ebebec;
     .list-group-item {
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      text-align: left;
       border: none;
       border-bottom: 1px solid #ebebec;
       margin: 0;
@@ -33,6 +37,22 @@
       opacity: 0.5;
       &:hover {
         opacity: 1 !important;
+      }
+      img {
+        width: 50px;
+        height: 50px;
+        margin: 0 10px;
+      }
+      .content__right {
+        display: inline-block;
+        width: calc(100% - 80px);
+        white-space: nowrap;
+        overflow: hidden;
+        p,
+        h6 {
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
       }
     }
   }
@@ -66,5 +86,12 @@
 .listMovie__content::-webkit-scrollbar-thumb {
   border-radius: 5px;
   background-color: #fff;
-  background-image: -webkit-gradient(linear, 40% 0%, 75% 84%, from(#4d9c41), to(#19911d), color-stop(0.6, #54de5d));
+  background-image: -webkit-gradient(
+    linear,
+    40% 0%,
+    75% 84%,
+    from(#4d9c41),
+    to(#19911d),
+    color-stop(0.6, #54de5d)
+  );
 }
