--- a/src/Containers/Home/HomePage/login/index.scss
+++ b/src/Containers/Home/HomePage/login/index.scss
@@ -11,6 +11,14 @@
     opacity: 1;
   }
   .signup__content {
+    .MuiInputBase-input:-webkit-autofill {
+      background: none !important;
+    }
+    input:-internal-autofill-selected {
+      background: inherit !important;
+      appearance: none;
+      color: inherit !important;
+    }
     transition: all 1s ease-in-out;
     opacity: 0;
     position: absolute;
@@ -25,8 +33,13 @@
     background-image: linear-gradient(
       to bottom,
       rgba(20, 50, 93, 0.9),
-      rgba(8, 22, 48, 0.7)
+      rgba(8, 22, 48, 0.9)
     );
+    // background-image: linear-gradient(
+    //   to bottom,
+    //   rgba(255, 255, 255, 0.9),
+    //   rgba(10, 19, 36, 0.9)
+    // );
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.45);
   }
   .login__content {
