--- a/src/Containers/Home/HomePage/movieSchedule/heThongRap/index.scss
+++ b/src/Containers/Home/HomePage/movieSchedule/heThongRap/index.scss
@@ -2,42 +2,45 @@
   width: 92px;
   min-height: 548px;
   .list-group {
-    border: 1px solid #ebebec;
+    border: 1px solid #d8d8da !important;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     .list-group-item {
       border: none;
-      border-bottom: 1px solid #ebebec;
+      border-bottom: 1px solid #d8d8da !important;
       margin: 0;
       cursor: pointer;
-      opacity: 0.5;
-      &:hover {
+      // opacity: 0.4;
+      &:hover img {
         opacity: 1 !important;
       }
     }
   }
 }
 .heThongCumRap__content {
+  // border-color:#ebebec;
   width: 35%;
   min-height: 548px;
   max-height: 548px;
   overflow-y: auto;
   .list-group {
-    border-top: 1px solid #ebebec;
-    border-bottom: 1px solid #ebebec;
+    border-top: 1px solid #d8d8da !important;
+    border-bottom: 1px solid #d8d8da !important;
     .list-group-item {
       display: flex;
       justify-content: left;
       align-items: center;
       text-align: left;
       border: none;
-      border-bottom: 1px solid #ebebec;
+      border-bottom: 1px solid #d8d8da !important;
       margin: 0;
       cursor: pointer;
-      opacity: 0.5;
-      &:hover {
+      // opacity: 0.5;
+      &:hover .content__right,
+      &:hover img {
         opacity: 1 !important;
       }
+
       img {
         width: 50px;
         height: 50px;
@@ -64,7 +67,7 @@
   max-height: 700px;
   overflow-x: hidden;
   overflow-y: auto;
-  border: 1px solid #ebebec;
+  border: 1px solid #d8d8da !important;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
