--- a/src/Containers/Home/HomePage/login/index.scss
+++ b/src/Containers/Home/HomePage/login/index.scss
@@ -11,13 +11,18 @@
     opacity: 1;
   }
   .signup__content {
-    .MuiInputBase-input:-webkit-autofill {
-      background: none !important;
-    }
-    input:-internal-autofill-selected {
-      background: inherit !important;
-      appearance: none;
-      color: inherit !important;
+    // .MuiInputBase-input:-webkit-autofill {
+    //   background: inherit !important;
+    //   appearance: none;
+    //   color: inherit !important;
+    // }
+    // input:-internal-autofill-selected {
+    //   background: inherit !important;
+    //   appearance: none;
+    //   color: inherit !important;
+    // }
+    .MuiInputBase-input {
+      color: white;
     }
     transition: all 1s ease-in-out;
     opacity: 0;
@@ -29,6 +34,7 @@
     max-width: 360px;
     padding: 30px;
     border-radius: 5px;
+
     text-align: center;
     background-image: linear-gradient(
       to bottom,
@@ -69,7 +75,7 @@
     label {
       display: block;
       text-align: left;
-      color: white;
+      color: #9d9d9d;
     }
     .btn-submit {
       margin-top: 15px;
