--- a/src/Containers/Home/HomePage/movieSchedule/heThongRap/index.scss
+++ b/src/Containers/Home/HomePage/movieSchedule/heThongRap/index.scss
@@ -11,8 +11,12 @@
       margin: 0;
       cursor: pointer;
       // opacity: 0.4;
+
       &:hover img {
         opacity: 1 !important;
+      }
+      img {
+        transition: all 0.3s;
       }
     }
   }
@@ -35,6 +39,7 @@
       border-bottom: 1px solid #d8d8da !important;
       margin: 0;
       cursor: pointer;
+
       // opacity: 0.5;
       &:hover .content__right,
       &:hover img {
@@ -45,12 +50,14 @@
         width: 50px;
         height: 50px;
         margin: 0 10px;
+        border-radius: 2px;
       }
       .content__right {
         display: inline-block;
         width: calc(100% - 80px);
         white-space: nowrap;
         overflow: hidden;
+        transition: all 0.2s;
         p,
         h6 {
           overflow: hidden;
