--- a/src/Containers/Home/Components/carousel/index.scss
+++ b/src/Containers/Home/Components/carousel/index.scss
@@ -18,6 +18,7 @@
       height: 550px;
       cursor: pointer;
       .play__trailer {
+        opacity: 0;
         border: none;
         background-color: transparent;
         transform: 50% 50%;
@@ -34,7 +35,7 @@
         height: 45px;
         opacity: 0;
 
-        transition: all 0.35s;
+        transition: all 0.75s;
         .material-icons__play {
           font-size: 40px;
           border: 2px solid white;
@@ -47,16 +48,26 @@
           transition: all 0.5s;
         }
       }
+      &:hover {
+        .play__trailer {
+          opacity: 1;
+        }
+      }
     }
     .swiper-slide-active {
       .play__trailer {
         transform: scale(1);
-        opacity: 1;
-        transition: all 1.75s;
+        opacity: 0;
+        transition: all 0.75s;
         &:hover .material-icons__play {
           color: #f79400;
           background-color: rgba($color: #dfdfdf, $alpha: 0.4);
           transition: all 0.5s;
+        }
+      }
+      &:hover {
+        .play__trailer {
+          opacity: 1;
         }
       }
     }
