--- a/src/Containers/Home/UserPage/index.scss
+++ b/src/Containers/Home/UserPage/index.scss
@@ -117,13 +117,15 @@
 
       .item-leave {
         opacity: 1;
-        transform: scale(1);
+        transform: scale(1) translateY(0px);
+        // transform: ;
+
         // transform: translateX(15%);
       }
 
       .item-leave.item-leave-active {
         opacity: 0.01;
-        transform: scale(0.01);
+        transform: scale(0.01) translateY(400px);
         transition: all 400ms ease-in;
       }
     }
