update user component code

--- a/src/Containers/Home/Components/header/index.scss
+++ b/src/Containers/Home/Components/header/index.scss
@@ -54,6 +54,10 @@ header:hover {
     border-radius: 25px;
     margin-right: 5px;
   }
+  .moveVeDaDatLink {
+    text-decoration: none;
+    color: black;
+  }
 }
 .dropdown-content {
   display: none;
