--- a/src/Containers/Home/HomePage/movieSchedule/lichChieuPhim/movieItem/index.scss
+++ b/src/Containers/Home/HomePage/movieSchedule/lichChieuPhim/movieItem/index.scss
@@ -32,7 +32,7 @@
 
 .showOrHideDiv {
   overflow: hidden;
-  transition: max-height 0.4s;
+  transition: max-height 0.3s linear;
   .listSuatChieuPhim {
     display: flex;
     gap: 15px;
