--- a/src/Containers/Home/UserPage/index.scss
+++ b/src/Containers/Home/UserPage/index.scss
@@ -3,10 +3,6 @@
   margin-top: 70px;
   height: calc(100vh - 70px);
   width: 100%;
-  //   background-attachment: fixed;
-  //   background-repeat: no-repeat;
-  //   background-size: cover;
-  //   background-position: bottom;
 
   .background__filter {
     position: fixed;
@@ -70,7 +66,7 @@
           }
 
           .user__infor {
-            margin-top: 30px;
+            margin-top: 15px;
             padding-left: 30px;
             .title,
             .infor {
@@ -99,6 +95,21 @@
             // visibility: visible;
             // overflow: visible;
             // transition: 0.35s;
+          }
+          .btn__comeback {
+            position: absolute;
+            top: 5px;
+            left: 5px;
+            font-size: 24px;
+            line-height: 50px;
+            color: white;
+            border: none;
+            outline: none;
+            .MuiButton-label,
+            .MuiTouchRipple-root {
+              display: inline-block;
+              padding: 0;
+            }
           }
         }
       }
