--- a/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/cumRapComponent/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/cumRapComponent/index.scss
@@ -14,14 +14,20 @@
             transition: all 0.2s;
             margin-top: 10px;
         }
+        .showHideRender {
+            overflow: hidden;
+            transition: all 0.4s;
+        }
         .infoTheater {
-            padding-left: 10px;
             height: 50px;
             overflow: hidden;
+            margin-bottom: 10px;
             h6 {
-                cursor: pointer;
+                display: inline;
+                height: 100%;
                 // margin-bottom: 15px;
                 padding-bottom: 30px;
+                padding-left: 10px;
             }
         }
         p {
