--- a/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/cumRapComponent/lichChieuComponent/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/showing-component/lich-chieu/showing-schedule/cumRapComponent/lichChieuComponent/index.scss
@@ -5,6 +5,24 @@
     margin-bottom: 10px !important;
     transition: all 0.2s !important;
     &:hover {
-        color: #f79400;
+        .timeStart {
+            color: #fb4226;
+        }
+    }
+    .timeStart {
+        font-size: 18px;
+        font-weight: 500;
+        color: #108f3e;
+        letter-spacing: -0.16px;
+    }
+    .timeDisabled {
+        font-size: 18px;
+        font-weight: 500;
+        letter-spacing: -0.16px;
+    }
+    small {
+        font-size: 14px;
+        font-weight: 400;
+        color: #9b9b9b;
     }
 }
