--- a/src/Containers/Home/HomePage/MovieDetail/showing-component/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/showing-component/index.scss
@@ -49,3 +49,38 @@
         cursor: default;
     }
 }
+.cssAnimation__content {
+    .item-enter {
+        // opacity: 0.01;
+        // transform: translateY(800px);
+        opacity: 0;
+        z-index: 1;
+        transition: all 1s ease-in;
+    }
+
+    .item-enter.item-enter-active {
+        opacity: 1;
+        // transform: translateY(0px);
+        z-index: 2;
+        transition: all 1s ease-in;
+        // transform: 500ms;
+    }
+
+    .item-leave {
+        opacity: 1;
+        z-index: 2;
+        transition: all 1s ease-out;
+        // transform: scale(1) translateY(0px);
+        // transform: ;
+
+        // transform: translateX(15%);
+    }
+
+    .item-leave.item-leave-active {
+        opacity: 0;
+        z-index: 1;
+        // transform: scale(0.01) translateY(400px);
+        // transition: all 400ms ease-out;
+        transition: all 1s ease-out;
+    }
+}
