--- a/src/Containers/Home/HomePage/MovieDetail/showing-component/thong-tin/index.scss
+++ b/src/Containers/Home/HomePage/MovieDetail/showing-component/thong-tin/index.scss
@@ -7,3 +7,12 @@
     color: #e9e9e9;
     font-size: 14px;
 }
+.danhGia__left {
+    padding: 0;
+    .row__leftInfo {
+        margin-bottom: 10px;
+        .left__content {
+            padding: 0 30px 0 0;
+        }
+    }
+}
