--- a/src/Containers/Home/HomePage/checkout/index.scss
+++ b/src/Containers/Home/HomePage/checkout/index.scss
@@ -129,7 +129,7 @@
       margin-right: 5px;
     }
   }
-  ul {
+  .checkout__ul {
     margin: 0;
     list-style: none;
     display: flex;
@@ -160,5 +160,23 @@
     line-height: 80px;
     border-bottom: 1px solid #e9e9e9;
     margin: 0;
+  }
+  h5 {
+    margin-top: 5px;
+    span {
+      color: #fff;
+      border-radius: 4px;
+      padding: 0 8px;
+      margin-right: 5px;
+      font-size: 18px;
+      min-width: 33px;
+      text-align: center;
+    }
+    .c13 {
+      background-color: #fb4226;
+    }
+    .p {
+      background-color: #00ac4d;
+    }
   }
 }
