update result code

--- a/src/Containers/Home/HomePage/checkout/components/index.scss
+++ b/src/Containers/Home/HomePage/checkout/components/index.scss
@@ -1,3 +1,10 @@
+.btn__home {
+  transition: all 0.3s;
+  &:hover {
+    color: #f79400;
+  }
+}
+
 #user__content {
   .signin {
     display: flex;
