--- a/src/Containers/Home/HomePage/checkout/result/index.scss
+++ b/src/Containers/Home/HomePage/checkout/result/index.scss
@@ -17,6 +17,7 @@
     background-position: center;
     opacity: 0.95;
     .header__ticket {
+      padding: 5px 0;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -25,6 +26,8 @@
       text-transform: uppercase;
       background-position: center;
       .header__title {
+        display: flex;
+        align-items: center;
         margin: 4px 0;
         line-height: 1;
         font-size: 18px;
@@ -38,6 +41,9 @@
       padding: 10px 15px;
       p {
         margin: 0;
+      }
+      .infor__text {
+        padding-left: 5px;
       }
       .infor__title {
         font-weight: 500;
