--- a/src/Containers/Home/HomePage/movieList/movieItem/index.scss
+++ b/src/Containers/Home/HomePage/movieList/movieItem/index.scss
@@ -1,8 +1,10 @@
 .movieItem {
   position: relative;
-  padding: 0 25px;
   border: 0;
-  margin: 15px 0 !important;
+  padding: 20px 10px 0;
+  margin-bottom: 25px;
+  height: 400px;
+  // margin: 15px 0 !important;
   cursor: default;
   .card {
     border: 0;
